[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "itell-markdown"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
html5ever         = "0.27"
log               = "0.4"
markup5ever_rcdom = "0.3.0"
napi              = "2"
napi-derive       = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
